@@ -987,8 +987,12 @@ function ShowTemps()
         '\t    <div id="timesun" />\n' +
         '\t  </td>\n' +
         '\t  <td align="right">\n' +
-        '\t    <a class="btnstyle" onclick="ShowCustomTempLog();" data-i18n="Custom Graph">Custom Graph</a>\n' +
-        '\t    <a class="btnstyle" onclick="AddTempDevice();" data-i18n="Add Sensor">Add Sensor</a>\n' +
+        '\t    <a class="btnstyle" onclick="ShowCustomTempLog();" data-i18n="Custom Graph">Custom Graph</a>\n';
+  if (window.my_config.userrights==2) {
+	tophtm+=
+        '\t    <a class="btnstyle" onclick="AddTempDevice();" data-i18n="Add Sensor">Add Sensor</a>\n';
+  }
+  tophtm+=     
         '\t  </td>\n' +
         '\t</tr>\n' +
         '\t</table>\n';
